# dkml-installer-ocaml

./: .gitattributes  .gitignore  BOOTSTRAPPING.md  DEVELOPING.md  LICENSE  README.md  bump-packages.cmake  bump-version.cmake  dkml-installer-network-ocaml.opam  dkml-installer-network-ocaml.opam.template  dkml-installer-ocaml-common.opam  dkml-installer-ocaml-network.opam  dkml-installer-ocaml-network.opam.template  dkml-installer-ocaml-offline.opam  dkml-installer-ocaml-offline.opam.template  dkml-installer-ocaml.opam  dkml-installer-offline-ocaml.opam  dkml-installer-offline-ocaml.opam.template  dune-project
.ci/: README.txt  dune
.github/workflows/: build.yml  manage-space.yml  package-old.yml  package.yml  syntax.yml
.github/workflows/scripts/: all_bootstrap_opam_from_historical_release.sh  all_create_installer_opam_switch.sh  all_initialize_opam_root.sh  all_setup_opam_repositories.sh  win32_build_installer.cmd  win32_install_tools.sh
.github/workflows/scripts/localdev/: package_win32_msys2.sh  windows_vars.source.sh
.github/workflows/syntax/: mlc_config.json
ci/: build-test.sh
ci/setup-dkml/gh-darwin/post/: action.yml  dune
ci/setup-dkml/gh-darwin/pre/: action.yml  dune
ci/setup-dkml/gh-linux/post/: action.yml  dune
ci/setup-dkml/gh-linux/pre/: action.yml  dune
ci/setup-dkml/gh-windows/post/: action.yml  dune
ci/setup-dkml/gh-windows/pre/: action.yml  dune
ci/setup-dkml/gl/: dune  setup-dkml.gitlab-ci.yml
ci/setup-dkml/pc/: dune  setup-dkml-darwin_x86_64.sh  setup-dkml-linux_x86.sh  setup-dkml-linux_x86_64.sh  setup-dkml-windows_x86.ps1  setup-dkml-windows_x86_64.ps1
contributors/: BINARY_SIGNING.md  BINARY_SIGNING_Yubikey.md  BINARY_SIGNING_uTrust.md  full-chain.p7.pem  sign.sh
dunify/common-generator/: common_installer_generator.ml  dune
dunify/dune-generator/: dune  dune_sexp.ml  main.ml
dunify/ml-generator/: dune  main.ml
dunify/ml-generator/code/: README.md  create_installers.ml  discover.ml  dune  entry-application.manifest  entry_assembly_manifest.ml  entry_main.ml  package_setup.ml  package_uninstaller.ml  private_common.ml  runner_admin.ml  runner_user.ml
dunify/ml-generator/lib/: dune  ml_of_installer_generator_lib.ml  ml_of_installer_generator_lib.mli
dunify/ml-generator/tests/: dune  test_template.ml
i-common/src/: README-icon.md  dune  private_common_base.ml  version.ml
i-network/src/: dune  private_common.ml
i-network/winget/: README.md
i-network/winget/manifest/: Diskuv.OCaml.installer.yaml  Diskuv.OCaml.locale.en-US.yaml  Diskuv.OCaml.yaml
i-offline/src/: dune  private_common.ml
i-offline/winget/manifest/: Diskuv.OCaml.locale.en-US.yaml
installer/src/: 32x32-README.md  README-icon.md  dune  opam_to_semver.ml  private_common.ml  version.ml
installer/winget/: README.md
installer/winget/manifest/: Diskuv.OCaml.installer.yaml  Diskuv.OCaml.locale.en-US.yaml  Diskuv.OCaml.yaml
vagrant/win32/: .gitignore  README.md  Vagrantfile  mock-ca-cert.pem  mock-ca-key.pem  opamversion.txt  tagversion.txt  test-language.ps1
vagrant/win32/test_installation.t/: README.txt  dune-project  test_installation.opam
vagrant/win32/test_installation.t/lib/: dune
vagrant/win32/test_installation.t/test/: dune  test.ml
