(rule
 (deps
  (glob_files code/*.ml)
  (glob_files code/*.manifest))
 (target code.ml)
 (action
  (run ocaml-crunch -m plain -e ml -e manifest -o %{target} code/)))

(executable
 (name main)
 (public_name ml-of-installer-generator)
 (libraries
  bos
  cmdliner
  common_installer_generator
  dkml-install-runner
  ml_of_installer_generator_lib))
