opam-version: "2.0"
version: "1.0"
maintainer: "bob@sponge.com"
authors: ["SpongeBob"]
homepage: "https://github.com/SpongeBob/test_installation"
bug-reports: "https://github.com/SpongeCob/test_installation/issues"
dev-repo: "git+https://github.com/SpongeBob/test_installation.git"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]